ImplementandoSubMenus_RelatoriosEmTela_ValidacoesEmGeral

--- a/cafeservellocontroler/Views/AlterarSenha/Editar.cshtml
+++ b/cafeservellocontroler/Views/AlterarSenha/Editar.cshtml
@@ -51,7 +51,7 @@
                 <i class="fa-regular fa-floppy-disk fa-lg"></i>
                 Editar
             </button>
-            <a class="btn btn-outline-danger mt-3 button-submit-close" asp-controller="AlterarSenha" asp-action="Index" role="button">
+            <a class="btn btn-outline-danger mt-3 button-submit-close" data-bs-dismiss="modal" role="button">
                 <i class="fa-solid fa-eject fa-lg"></i>
                 Cancelar
             </a>
