--- a/cafeservellocontroler/Views/AlterarSenha/EditarDadosGet.cshtml
+++ b/cafeservellocontroler/Views/AlterarSenha/EditarDadosGet.cshtml
@@ -31,7 +31,7 @@
 
     <div class=" d-flex justify-content-end   ">
 
-        <button type="submit" class="btn btn-primary mt-3 button-submit-close " style="margin-right: 15px">
+        <button type="submit" class="btn btn-primary mt-3 button-submit-close " data-bs-dismiss="modal" style="margin-right: 15px">
             <i class="fa-regular fa-floppy-disk fa-lg"></i>
             Editar
 
