--- a/cafeservellocontroler/Views/AlterarSenha/Index.cshtml
+++ b/cafeservellocontroler/Views/AlterarSenha/Index.cshtml
@@ -25,7 +25,7 @@
 }
 
 <div class="d-flex justify-content-center">
-    <div class="background-div mt-5 p-4 container">
+    <div class="background-div mt-5 p-4 container-fluid">
 
         <div class="mt-4 mb-4 p-3 shadow-sm d-flex justify-content-center">
             <i class="fa-solid fa-fingerprint fa-xl d-flex align-items-center"></i>
