--- a/cafeservellocontroler/Views/Shared/Components/Menu/Default.cshtml
+++ b/cafeservellocontroler/Views/Shared/Components/Menu/Default.cshtml
@@ -3,116 +3,216 @@
 
 
 @* Foto do usuario *@
-<div id="sidebar_content">
+
 
 <div id="user">
     <img src="~/css/vetor-de-ícone-perfil-do-avatar-padrão-foto-usuário-mídia-social-183042379.webp" id="user_avatar" alt="Avatar" />
 
     <p id="user_infos">
         <span class="item-description">
-            @Model.Login
+            Usuário: @Model.Login
+            
         </span>
+
         <span class="item-description">
-               @cafeservellocontroler.Enums.PerfilEnum.Admin
+              Status: @Model.Perfil
         </span>
     </p>
 </div>
 
 @* Links e icons dos botões do sidebar *@
-<ul id="side_items">
+@* <ul id="side_items">
 
         <li class="side-item" data-url="/Home/Index">
             <a>
-                @* <i class="fa-brands fa-product-hunt"></i> *@
+                
                 <i class="fa-solid fa-house"></i>
                 <span class="item-description">
                     Página Inicial
                 </span>
             </a>
-        </li>
+        </li> *@
 
-@if (Model.Perfil == cafeservellocontroler.Enums.PerfilEnum.Admin)
-    {
-    <li class="side-item" data-url="/Produto/Index">
-        <a>
-            @* <i class="fa-brands fa-product-hunt"></i> *@
-                <i class="fa-solid fa-mug-hot"></i>
-            <span class="item-description">
-                Produto
-            </span>
-        </a>
-    </li>
-        }
-    <li class="side-item" data-url="/Revendedor/Index">
-        <a>
-            <i class="fa-solid fa-user"></i>
-            <span class="item-description">
-                Revendendor
-            </span>
-        </a>
-    </li>
-
-    @if (Model.Perfil == cafeservellocontroler.Enums.PerfilEnum.Admin)
-    {
-    <li class="side-item" data-url="/Usuario/Index">
-        <a href="#">
-            <i class="fa-solid fa-hands"></i>
-            <span class="item-description">
-                Usuário
-            </span>
-        </a>
-    </li>
-    }
-
-
-
-        <li class="side-item" data-url="/Venda/Index">
+        @* <li class="side-item" data-url="/Venda/Index">
             <a href="#">
                 <i class="fa-solid fa-store"></i>
                 <span class="item-description">
                     Vendas
                 </span>
             </a>
-        </li>
+        </li> *@
 
 
-        <li class="side-item" data-url="/Relatorio/Index">
+        
+
+    @* <li class="side-item" data-url="/Revendedor/Index">
+        <a>
+            <i class="fa-solid fa-user"></i>
+            <span class="item-description">
+                Revendendor
+            </span>
+        </a>
+    </li> *@
+
+    
+
+
+
+        
+
+
+        @* <li class="side-item" data-url="/Relatorio/Index">
             <a href="#">
                 <i class="fa-solid fa-print"></i>
                 <span class="item-description">
                     Gerar Relatório
                 </span>
             </a>
+        </li> *@
+
+
+    
+        
+            @* <li class="side-item-menu  submenu-toggle">
+                <a>
+                <i class="fa-solid fa-bars-progress"></i>
+                    <span class="item-description">
+                        Atividades
+                    </span>
+                    <i class="fa-solid fa-chevron-down arrow"></i>
+                </a>
+            </li>
+
+            <ul class="submenu">
+                <li class="side-item-itens" data-url="/Venda/Index">
+                    <a>
+                         <i class="fa-solid fa-store"></i>
+                        <span class="item-description">Venda</span>
+                    </a>
+                </li>
+
+                <li class="side-item-itens" data-url="/Revendendor/Index">
+                    <a>
+                    <i class="fa-solid fa-user"></i>
+                        <span class="item-description">Revendendor</span>
+                    </a>
+                </li>
+
+                
+
+            </ul> *@
+
+
+            @* <li class="side-item-menu  submenu-toggle">
+                <a>
+                <i class="fa-solid fa-print"></i>
+                    <span class="item-description">
+                        Gerar Relatório
+                    </span>
+                    <i class="fa-solid fa-chevron-down arrow"></i>
+                </a>
+            </li>
+
+            <ul class="submenu">
+
+
+            <li class="side-item-itens">
+                <a href="javascript:void(0)"
+                   data-bs-toggle="modal"
+                   data-bs-target="#modalLucroPorProdutoIndex"
+                   onclick="limparFormulario()">
+                    <i class="fa-solid fa-user"></i>
+                    <span class="item-description">Lucro por Produto</span>
+                </a>
+            </li>
+
+                
+
+            </ul> *@
+
+
+
+
+
+
+
+       
+
+
+
+
+
+      @*   @if (Model.Perfil == cafeservellocontroler.Enums.PerfilEnum.Admin)
+        {
+            <li class="side-item-menu  submenu-toggle">
+                <a>
+                    <i class="fa-solid fa-gears"></i>
+                    <span class="item-description">
+                        Controle
+                    </span>
+                    <i class="fa-solid fa-chevron-down arrow"></i>
+                </a>
+            </li>
+
+            <ul class="submenu">
+                <li class="side-item-itens" data-url="/Produto/Index">
+                    <a>
+                        <i class="fa-solid fa-mug-hot"></i>
+                        <span class="item-description">Produto</span>
+                    </a>
+                </li>
+
+                <li class="side-item-itens" data-url="/Usuario/Index">
+                    <a>
+                        <i class="fa-solid fa-hands"></i>
+                        <span class="item-description">Usuário</span>
+                    </a>
+                </li>
+            </ul>
+        } *@
+
+
+
+        
+
+
+
+
+
+
+@* 
+        <li class="side-item" data-url="/AlterarSenha/Index">
+            <a href="#">
+                <i class="fa-solid fa-fingerprint"></i>
+                <span class="item-description">
+                    Perfil
+                </span>
+            </a>
         </li>
 
 
-    <li class="side-item" data-url="/AlterarSenha/Index">
-        <a href="#">
-                <i class="fa-solid fa-fingerprint"></i>
-            <span class="item-description">
-                Perfil
-            </span>
-        </a>
-    </li>
-
-    
-
-    
-
-</ul>
+</ul> *@
 
 @* Botão de abrir o side bar *@
-<button id="open_btn">
+@* <button id="open_btn">
     <i id="open_btn_icon" class="fa-solid fa-chevron-right"></i>
 </button>
-</div>
 
 
-<a id="logout" asp-controller="Login" asp-action="Sair">
-    <button id="logout_btn">
-        <i class="fa-solid fa-right-from-bracket"></i>
-        <span class="item-description">
-            Sair
-        </span>
-    </button>
-</a>
+
+
+
+            <script>
+    document.querySelectorAll(".submenu-toggle").forEach(toggle => {
+        toggle.addEventListener("click", () => {
+            toggle.classList.toggle("open");
+
+            let submenu = toggle.nextElementSibling;
+            if (submenu.style.display === "flex") {
+                submenu.style.display = "none";
+            } else {
+                submenu.style.display = "flex";
+            }
+        });
+    });
+</script> *@
