--- a/cafeservellocontroler/Views/Produto/Index.cshtml
+++ b/cafeservellocontroler/Views/Produto/Index.cshtml
@@ -35,6 +35,17 @@
         </div>
     }
 
+    <a href="javascript:void(0)"
+       data-bs-toggle="modal"
+       data-bs-target="#modalLucroPorProdutoIndex"
+       onclick="limparFormulario()">
+
+        <i class="fa-solid fa-file-pdf"></i>
+        <span class="item-description">Lucro por Produto</span>
+    </a>
+
+
+
 
         
     @* A barra de pesquisar *@
@@ -58,6 +69,17 @@
                     data-bs-target="#modalCriar"
                     onclick="limparFormulario()">
                 <i class="fa-regular fa-square-plus"></i>
+            </button>
+        </div>
+
+        <div class="d-flex justify-content-end">
+            <button class="btn-lg btn-primary  "
+                    href="javascript:void(0)"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalLucroPorProdutoIndex"
+                    onclick="limparFormulario()">
+                
+                <i class="fa-solid fa-print"></i>
             </button>
         </div>
 
@@ -87,11 +109,13 @@
         
         <thead class="table-thead">
             <tr class="div-thead">
-                <th scope="col" class="idTR">ID</th>
+                @* <th scope="col" class="idTR">ID</th> *@
                 <th scope="col">Nome</th>
-                <th scope="col">Preço Compra</th>
-                <th scope="col">Preço</th>
-                <th scope="col">Estoque</th>
+                <th scope="col">Descrição</th>
+                <th scope="col" class="text-center">Estoque</th>
+                <th scope="col" class="text-center">Preço Compra</th>
+                <th scope="col" class="text-center">Preço Venda</th>
+                
                 <th scope="col" class="alinharModificar-ApagarTh">Modificar</th>
                 <th scope="col" class="alinharModificar-ApagarTh">Apagar</th>
             </tr>
@@ -106,11 +130,13 @@
 
 
                     <tr>
-                        <th scope="row" class="idTH">@produto.Id</th>
-                        <td scope="row" class="espacoPadraoTabela">@produto.Nome</td>
-                        <td scope="row" class="espacoPadraoTabela">@(produto.PrecoCompra.HasValue? produto.PrecoCompra.Value.ToString("C") : "0,00")</td>
-                        <td scope="row" class="espacoPadraoTabela">@(produto.Preco.HasValue? produto.Preco.Value.ToString("C") : "0,00")</td>
-                        <td scope="row" class="espacoPadraoTabela">@produto.Estoque</td>
+                        @* <th scope="row" class="idTH">@produto.Id</th> *@
+                        <td scope="row" class="espacoPadraoTabelaProduto">@produto.Nome</td>
+                        <td scope="row" class="espacoPadraoTabelaProduto">@produto.Descricao</td>
+                        <td scope="row" class="espacoPadraoTabelaEstoque text-center">@produto.Estoque</td>
+                        <td scope="row" class="espacoPadraoTabelaTotalVenda text-end ">@(produto.PrecoCompra.HasValue? produto.PrecoCompra.Value.ToString("C") : "0,00")</td>
+                        <td scope="row" class="espacoPadraoTabelaTotalVenda text-end">@(produto.Preco.HasValue? produto.Preco.Value.ToString("C") : "0,00")</td>
+                        
                         <td scope="row" class="espacoModificarOpcoes">
                             <div role="group" class="d-grid gap-1 formatacaoBotaoTabela">
 
