--- a/cafeservellocontroler/Views/Revendedor/Index.cshtml
+++ b/cafeservellocontroler/Views/Revendedor/Index.cshtml
@@ -57,6 +57,16 @@
                 <i class="fa-regular fa-square-plus"></i>
             </button>
         </div>
+        <div class="d-flex justify-content-end">
+            <button class="btn-lg btn-primary  "
+                    href="javascript:void(0)"
+                    data-bs-toggle="modal"
+                    data-bs-target="#modalRevendedorMaisAtivoIndex"
+                    onclick="limparFormulario()">
+
+                <i class="fa-solid fa-print"></i>
+            </button>
+        </div>
 
     </div>
 </div>
@@ -83,12 +93,13 @@
     <table class="table table-bordered table-striped" id="table">
         <thead class="table-thead">
             <tr class="div-thead">
-                    <th scope="col" class="idTR">ID</th>
+                    @* <th scope="col" class="idTR">ID</th> *@
                     <th scope="col">Nome</th>
                     <th scope="col">Nome Fantasia</th>
-                    <th scope="col">Telefone</th>   
+                     
                     <th scope="col">Endereço</th>
-                    <th scope="col" class="alinharModificar-ApagarTh">Modificar</th>
+                <th scope="col">Telefone</th>
+                <th scope="col" class="alinharModificar-ApagarTh">Modificar</th>
                     <th scope="col" class="alinharModificar-ApagarTh">Apagar</th>
                 </tr>
             </thead>
@@ -98,11 +109,12 @@
                     foreach (RevendedorViewModel revendedor in Model)
                     {
                         <tr>
-                            <th scope="row" class="idTH">@revendedor.Id</th>
+                            @* <th scope="row" class="idTH">@revendedor.Id</th> *@
                             <td scope="row" class="espacoPadraoTabela">@revendedor.Nome</td>
                             <td scope="row" class="espacoPadraoTabela">@revendedor.NomeFantasia</td>
-                            <td scope="row" class="espacoPadraoTabela">@revendedor.Telefone</td>
+                       
                             <td scope="row" class="espacoPadraoTabela">@revendedor.Endereco</td>
+                        <td scope="row" class="espacoPadraoTabelaTelefone text-center ">@revendedor.Telefone</td>
       
                             <td scope="row" class="espacoModificarOpcoes">
                             <div role="group" class="d-grid gap-1 formatacaoBotaoTabela">
