--- a/cafeservellocontroler/Views/Venda/Criar.cshtml
+++ b/cafeservellocontroler/Views/Venda/Criar.cshtml
@@ -8,7 +8,7 @@
     <div class="div-Criar reponsivo">
     <div class="row mb-3">
         <div class="col-12">
-            <label class="">Revendedor</label>
+            <label class="">Revendedor*</label>
                 <select asp-for="RevendedorId" class="form-select form-control" required>
                 <option value="">Selecione o revendedor</option>
                 @foreach (var r in Model.Revendedores)
@@ -30,7 +30,7 @@
             <div class="row item-row mb-3 border-bottom pb-3" data-index="@i">
 
                 <div class="col-6">
-                    <label class="">Produto</label>
+                    <label class="">Produto*</label>
 
                     <select asp-for="Itens[i].ProdutoId"
                             class="form-select select-produto form-control"
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="col-3">
-                    <label class="">Quantidade</label>
+                    <label class="">Quantidade*</label>
                     <input type="number"
                            asp-for="Itens[i].Quantidade"
                            class="form-control input-quantidade"
